# SimpleDeployer

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile_arm  a.out  readme.md  test.cfg
.github/workflows/: deploying.yml  dev_deploying.yml  make_stable.yml
nginx/nossl/: nginx.conf
nginx/nossl/templates/: default.conf.template
nginx/ssl/: nginx.conf
src/: controller.rs  main.rs
src/controller/: container.rs
src/lib/: config.rs  docker.rs  global.rs  logger.rs  mod.rs  registry.rs  utils.rs
src/lib/config/: parser.rs  parser_interfaces.rs
src/lib/docker/: container.rs  image.rs
src/lib/docker/container/: logger.rs  modify.rs
src/lib/global/: container_logger_implements.rs  container_logger_interfaces.rs  container_main_implements.rs  container_nginx_implements.rs  container_rollback_implements.rs  docker_implements.rs  global_interfaces.rs  parser_implements.rs  registry_implements.rs  status_implements.rs  status_interfaces.rs
src/lib/registry/: image.rs  request_interfaces.rs
src/lib/utils/: io.rs  registry.rs
